--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -13,6 +13,7 @@
   font-size: 36px;
   font-weight: 600;
   margin: 140px 0 48px;
+  text-align: center;
   @media (max-width: $phone-width) {
     margin: 0;
     padding: 1rem;
